using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant 
{
    public const string ANIM_IDLE = "IsIdle";
    public const string ANIM_RUN = "IsRunning";
    public const string ANIM_ATTACK = "IsAttack";
    public const string ANIM_WIN = "IsWin";
    public const string ANIM_DEAD = "IsDead";
    public const string ANIM_ULTI = "IsUlti";
    public const string TAG_BOT = "Bot";
    public const string TAG_TARGET = "Target";

}
